--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gen My Team</title>
+    <!-- bootstrap cdn -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    
 </head>
 <body>
-    
+    <!-- title header is centered with red background color at the top -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center ">Gen My Team</h1>
+            </div>
+        </div>
+    <!-- should have two rows and three columns of badges  -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="/assets/images/badge1.png" alt="...">
+                    <div class="caption">
+                        <h3>Badge 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="/assets/images/badge2.png" alt="...">
+                    <div class="caption">
+                        <h3>Badge 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="/assets/images/badge3.png" alt="...">
+                    <div class="caption">
+                        <h3>Badge 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
+                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    </div>
+                </div>
+            </div>
+   
 </body>
 </html>
