updated badges name and title area (just first row)

--- a/index.html
+++ b/index.html
@@ -17,39 +17,53 @@
                 <h1 class="text-center ">Gen My Team</h1>
             </div>
         </div>
-    <!-- should have two rows and three columns of badges  -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="/assets/images/badge1.png" alt="...">
-                    <div class="caption">
-                        <h3>Badge 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
+    <!-- should have two rows and three columns of badges with their name at the top and job title below  -->
+    <div class="row">
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
+                <div class="caption">
+                    <h3>John Doe</h3>
+                    <p>
+                        <strong>Job Title:</strong>
+                        <br>
+                        <em>
+                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                John Doe's LinkedIn Profile
+                            </a>
+                        </em>
+                    </p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="/assets/images/badge2.png" alt="...">
-                    <div class="caption">
-                        <h3>Badge 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
+                <div class="caption">
+                    <h3>John Doe</h3>
+                    <p>
+                        <strong>Job Title:</strong>
+                        <br>
+                        <em>
+                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                John Doe's LinkedIn Profile
+                            </a>
+                        </em>
+                    </p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    <img src="/assets/images/badge3.png" alt="...">
-                    <div class="caption">
-                        <h3>Badge 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quia!</p>
-                        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                    </div>
-                </div>
-            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
+                <div class="caption">
+                    <h3>John Doe</h3>
+                    <p>
+                        <strong>Job Title:</strong>
+                        <br>
+                        <em>
+                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+  
    
 </body>
 </html>
