updated badges name and title area and img

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,63 +8,132 @@
     <title>Gen My Team</title>
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    
+
 </head>
+
 <body>
     <!-- title header is centered with red background color at the top -->
+    <div class="row" style="background-color: rgb(230, 65, 65) ;">
+        <div class="col-md-12">
+            <h1 class="text-center" style="color: white ;">Gen My Team</h1>
+        </div>
+    </div>
     <div class="container">
+       
+        <!-- row 1 -->
+        <!-- should have two rows and three columns of badges with their name at the top and job title below with ID, email and github fields -->
         <div class="row">
-            <div class="col-md-12">
-                <h1 class="text-center ">Gen My Team</h1>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <!-- add blue background color to the name and job title -->
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile
+                                </a>
+                            </em>
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
-    <!-- should have two rows and three columns of badges with their name at the top and job title below  -->
-    <div class="row">
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
-                <div class="caption">
-                    <h3>John Doe</h3>
-                    <p>
-                        <strong>Job Title:</strong>
-                        <br>
-                        <em>
-                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
-                                John Doe's LinkedIn Profile
-                            </a>
-                        </em>
-                    </p>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile
+                                </a>
+                            </em>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile
+                                </a>
+                            </em>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
-                <div class="caption">
-                    <h3>John Doe</h3>
-                    <p>
-                        <strong>Job Title:</strong>
-                        <br>
-                        <em>
-                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
-                                John Doe's LinkedIn Profile
-                            </a>
-                        </em>
-                    </p>
+        <!-- row 2 -->
+        <!-- should have two rows and three columns of badges with their name at the top and job title below with ID, email and github fields -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile
+                                </a>
+                            </em>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile
+                                </a>
+                            </em>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
+                    <div class="caption">
+                        <h3>John Doe</h3>
+                        <p>
+                            <strong>Job Title:</strong>
+                            <br>
+                            <em>
+                                <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
+                                    John Doe's LinkedIn Profile                               </a>
+                                </a>
+                            </em>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" alt="...">
-                <div class="caption">
-                    <h3>John Doe</h3>
-                    <p>
-                        <strong>Job Title:</strong>
-                        <br>
-                        <em>
-                            <a href="https://www.linkedin.com/in/john-doe-b8a8b8a1/">
-  
-   
+        <!-- row 3 -->
+
+
 </body>
+
 </html>
