--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                     <img src="https://avatars3.githubusercontent.com/u/14098981?s=460&v=4" width="50%" alt="...">
                     <div class="caption">
                         <!-- add blue background color to the name and job title -->
-                        <h3>Ryan Hendrix</h3>
+                        <h3>Ryan H</h3>
                         <p>
                             <strong>Job Title:  Dev</strong>
                             <br>
-                            <strong>ID: 12</strong>
+                            <strong>ID: 15</strong>
                             <br>
-                            
+
                             <em>
-                                <a href="rhx">
-                                Ryan Hendrix's GitHub Profile
+                                <a href="https://github.com/rhx1138">
+                                Ryan H's GitHub Profile
                                 </a>
                             </em>
                         </p>
                         <p>
-                            <strong>Email:  ryanjhendrix@gmail.com</strong>
+                            <strong>Email:  ryan@gmail.com</strong>
                         </p>
                     </div>
                 </div>
