new branch from previous commit / no need for rollback

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <!-- add blue background color to the name and job title -->
                         <h3>Ryan H</h3>
                         <p>
-                            <strong>Job Title:  Dev</strong>
+                            <strong>Job Title:  Manager</strong>
                             <br>
-                            <strong>ID: 15</strong>
+                            <strong>ID: 42</strong>
                             <br>
 
                             <em>
@@ -38,7 +38,7 @@
                             </em>
                         </p>
                         <p>
-                            <strong>Email:  ryan@gmail.com</strong>
+                            <strong>Email:  gmail</strong>
                         </p>
                     </div>
                 </div>
